# code-story-platform

./: .env.example  .gitignore  .replit  CLAUDE.md  Dockerfile.frontend  PROGRESS.md  README.md  docker-compose.yml  next.config.mjs  package-lock.json  package.json  playwright.config.json  pnpm-lock.yaml  proxy.ts  pyproject.toml  replit.md
.planning/: BRIEF.md  ROADMAP.md
app/: globals.css  layout.tsx  page.tsx
backend/: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Dockerfile.worker  README.md  docker-compose.yml  requirements.txt
components/: auth-modal.tsx  chronicle-card.tsx  context-preview.tsx  dashboard-nav.tsx  featured-hero.tsx  floating-player.tsx  footer.tsx  generation-mode-selector.tsx  generation-pipeline.tsx  hero-section.tsx  intent-chat.tsx  logo.tsx  model-selector.tsx  navbar.tsx  parallax-background.tsx  pipeline-dashboard.tsx  processing-logs.tsx  public-story-card.tsx  settings-form.tsx  storage-error-boundary.tsx  story-generator.tsx  story-player.tsx  story-processing.tsx  tails-carousel.tsx  tales-carousel.tsx  trending-stories.tsx  user-menu.tsx
docs/: APPLICATION-AUDIT.md  AUDIO-PLAYER-AUDIT.md  COMPLETE-PROJECT-AUDIT.md  COMPREHENSIVE-AUDIT-V2.md  COMPREHENSIVE-PROJECT-AUDIT.md  ELEVENLABS-CLAUDE-ANALYSIS.md  ELEVENLABS-IMPLEMENTATION-PLAN.md  FINAL-FIX-SUMMARY.md  FINAL-IMPLEMENTATION-AUDIT.md  FINAL-STATUS-REPORT.md  FINAL-VERIFICATION.md  IMPLEMENTATION-PLAN.md  MASTER-AUDIT-2026-01-06.md  NEW-DATABASE-SETUP.md  RALPH-WIGGUM-ELEVENLABS-DOCUMENTATION.md  RALPH-WIGGUM-PROJECT-PLAN.md  REPOSITORY-ANALYSIS-PROCEDURE.md  SUPABASE-RECONNECTION-GUIDE.md  VERIFIED-PRODUCTION-AUDIT.md  validation-report-20260101.md
docs-plans-prompts-specs/: PROMPT.md
e2e/: generation.spec.ts
hooks/: use-story-websocket.ts
lib/: demo-mode.ts  (+2 more)
(+139 files in other folders)
